syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_package = "com.hugosave.intern.project.proto";
option java_multiple_files = true;

message UserEntity {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
}

message UserAssetAndBalanceEntity {
  UserBalanceEntity user_balance = 1;
  repeated UserAssetEntity user_assets = 2;
}

message UserBalanceEntity {
  string user_id = 1;
  double balance = 2;
}

message UserAssetEntity {
  string user_id = 1;
  string asset_code = 2;
  int32 quantity = 3;
}
